[package]
name = "mc-router"
version = "0.1.0"
authors = ["post-rex <post-rex@pm.me>"]
edition = "2018"

[dependencies]
bytes = "1"
mimalloc = { version = "0.1", default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "signal", "macros", "io-util", "fs", "sync", "time"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
