[package]
name = "mc-router"
version = "0.2.0"
authors = ["post-rex <post-rex@pm.me>"]
edition = "2021"

[dependencies]
bytes = "1.1.0"
dashmap = "5.2.0"
mimalloc = { version = "0.1.28", default-features = false }
notify = "4.0.17"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["tracing", "macros", "rt-multi-thread", "net", "io-util", "fs"] }
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
protocol = { git = "https://github.com/post-rex/mcsrs.git" }